# DHT11-HT-SENSOR

./: CMakeLists.txt
include/: dht11.h
src/: CMakeLists.txt  dht11.c  main.c
